tests/baselines/reference/es5-asyncFunctionLongObjectLiteral(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== es5-asyncFunctionLongObjectLiteral.ts (0 errors) ====
    // the generated code from both should be similar
    
    const fooShort = async () => {
        return {
            a: await Promise.resolve(0),
            b: await Promise.resolve(1),
            c: await Promise.resolve(2),
            d: await Promise.resolve(3),
            e: await Promise.resolve(4),
        };
    }
    
    const fooLong = async () => {
        return {
            a: await Promise.resolve(0),
            b: await Promise.resolve(1),
            c: await Promise.resolve(2),
            d: await Promise.resolve(3),
            e: await Promise.resolve(4),
            f: await Promise.resolve(5),
            g: await Promise.resolve(6),
            h: await Promise.resolve(7),
            i: await Promise.resolve(8),
            j: await Promise.resolve(9),
        };
    }
    